# messages

./: .env.template  Cargo.toml  dockerfile
src/: common.rs  lib.rs  main.rs  message.rs
src/common/: state.rs  transform.rs  types.rs
src/config/: envs.rs
src/core/: router.rs  transport.rs
src/core/router/: nats_router.rs
src/core/transport/: nats_transport.rs
src/message/: dtos.rs  message_controller.rs  message_model.rs  message_router.rs  message_service.rs  message_status.rs
src/message/dtos/: create_message_request.rs  edit_message_request.rs
tests/: messages_test.rs
