[package]
name = "messages"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
async-nats = { version = "0.39.0", features = ["service"] }
async-trait = "0.1.86"
chrono = { version = "0.4.39", features = ["serde"] }
futures = "0.3.31"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1.43.0", features = ["full", "macros", "rt-multi-thread"] }
