[package]
name = "messages"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
async-nats = { version = "0.39.0", features = ["service"] }
async-trait = "0.1.86"
bytes = "1.10.1"
chrono = { version = "0.4.39", features = ["serde"] }
dotenv = "0.15.0"
futures = "0.3.31"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls"] }
testcontainers = "0.23.3"
testcontainers-modules = { version = "0.11.6", features = ["nats"] }
tokio = { version = "1.43.0", features = ["full", "macros", "rt-multi-thread"] }
